syntax = "proto3";

package serialization;
option go_package = "github.com/ankur-anand/unisondb/internal/benchtests/serialization";

enum TransactionStatePb {
  TRANSACTION_STATE_PB_NONE = 0;
  TRANSACTION_STATE_PB_BEGIN = 1;
  TRANSACTION_STATE_PB_PREPARE = 2;
  TRANSACTION_STATE_PB_COMMIT = 3;
}

enum LogOperationTypePb {
  LOG_OPERATION_TYPE_PB_NO_OPERATION = 0;
  LOG_OPERATION_TYPE_PB_INSERT = 1;
  LOG_OPERATION_TYPE_PB_DELETE = 2;
  LOG_OPERATION_TYPE_PB_TXN_MARKER = 3;
  LOG_OPERATION_TYPE_PB_DELETE_ROW_BY_KEY = 4;
}

enum LogEntryTypePb {
  LOG_ENTRY_TYPE_PB_KV = 0;
  LOG_ENTRY_TYPE_PB_CHUNKED = 1;
  LOG_ENTRY_TYPE_PB_ROW = 2;
}

message ColumnDataPb {
  string name = 1;
  bytes value = 2;
}

message RowUpdateEntryPb {
  bytes key = 1;
  repeated ColumnDataPb columns = 2;
}

message RowUpdateEncodedPb {
  bytes value = 1;
}

message RowUpdateEntriesPb {
  repeated RowUpdateEncodedPb entries = 1;
}

message LogOperationDataPb {
  oneof payload {
    RowUpdateEntriesPb row_update_entries = 1;
  }
}

message LogRecordPb {
  uint64 lsn = 1;
  uint64 hlc = 2;
  uint32 crc32_checksum = 3;
  LogOperationTypePb operation_type = 4;
  TransactionStatePb txn_state = 5;
  LogEntryTypePb entry_type = 6;
  bytes txn_id = 7;
  bytes prev_txn_wal_index = 8;
  LogOperationDataPb payload = 9;
}
